# Previsore

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: idee-feature.md  previsioni_2026-06-27.md
scripts/: daily.sh
src/previsore/: __init__.py  backtest.py  blend.py  cli.py  confed.py  data.py  elo.py  evaluate.py  metrics.py  model.py  odds.py  render.py  scorers.py  squads.py
tests/: test_no_leakage.py  test_units.py
