[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "previsore"
version = "0.1.0"
description = "Predittore risultato esatto + 1X2 per partite di calcio internazionali (Mondiale 2026). Modello Dixon-Coles calibrato + Elo. Solo CPU, dati CC0, offline-friendly."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.scripts]
previsore = "previsore.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
